fix: 🐛 body overflow-y to auto

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,7 +1,8 @@
 .christmas {
-  height: 100vh;
+  // height: 100vh;
   background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
-  overflow: hidden;
+  overflow-y: auto;
+  overflow-x: hidden;
   filter: drop-shadow(0 0 10px white);
   color: #fff;
 }
